bin_PROGRAMS = CApp playTest

CApp_SOURCES = CApp.cpp
CApp_SOURCES += CSurface.cpp
CApp_SOURCES += CEvent.cpp
CApp_SOURCES += Decode.cpp
CApp_SOURCES += CController.cpp
CApp_SOURCES += CButton.cpp
CApp_SOURCES += CText.cpp
CApp_SOURCES += ECS.h

CApp_LDADD = -lpthread 
CApp_LDADD += $(SDL2_LIBS)
CApp_LDADD += $(FFMPEG_LIBS)
CApp_LDADD += $(GFLAGS_LIBS)
CApp_LDADD += $(GLOG_LIBS)
CApp_CXXFLAGS = $(SDL2_CFLAGS)
CApp_CXXFLAGS += $(FFMPEG_CFLAGS)
CApp_CXXFLAGS += $(GFLAGS_CFLAGS)
CApp_CXXFLAGS += $(GLOG_CFLAGS)
CApp_LDFLAGS = $(SDL2_LDFLAGS)
CApp_LDFLAGS += $(FFMPEG_LDFLAGS) 
CApp_LDFLAGS += $(GFLAGS_LDFLAGS) 
CApp_LDFLAGS += $(GLOG_LDFLAGS) 


playTest_SOURCES = playTest.cpp

playTest_LDADD = -lpthread 
playTest_LDADD += $(SDL2_LIBS)
playTest_LDADD += $(FFMPEG_LIBS)
playTest_CXXFLAGS = $(SDL2_CFLAGS)
playTest_CXXFLAGS += $(FFMPEG_CFLAGS)
playTest_LDFLAGS = $(SDL2_LDFLAGS)
playTest_LDFLAGS += $(FFMPEG_LDFLAGS) 
